[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/PlanetStuff/PlanetBase.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlanetSprite.gd" type="Script" id=2]
[ext_resource path="res://Sprites/PlanetStuff/Cont1.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 127.604

[node name="PlanetBase" type="Sprite"]

texture = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="PlanetCon" type="Sprite" parent="."]

texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility", "Z" ]

[node name="Area2D" type="Area2D" parent="."]

position = Vector2( 0.341709, -0.473518 )
scale = Vector2( 3.92591, 3.94526 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

position = Vector2( -0.0870394, 0.120022 )
scale = Vector2( 0.254718, 0.253469 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]


